[gd_scene load_steps=9 format=3 uid="uid://bfoabmylt4ar5"]

[ext_resource type="Script" path="res://scenes/entities/shadow/shadow.gd" id="1_amnuf"]
[ext_resource type="Resource" uid="uid://bts3u0vfq5bhl" path="res://scenes/entities/fish/Osteochthys.tres" id="2_iguua"]
[ext_resource type="Texture2D" uid="uid://cusnwg0quwr5s" path="res://assets/Sprite-0003.png" id="3_t6ea0"]
[ext_resource type="Script" path="res://scenes/entities/shadow/detect_area.gd" id="4_c6y7k"]
[ext_resource type="Script" path="res://scenes/entities/state_machine.gd" id="5_7ytth"]
[ext_resource type="Script" path="res://scenes/entities/state.gd" id="6_hiwmx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yv2gw"]
radius = 47.0
height = 148.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xbx01"]
radius = 7.0

[node name="Shadow" type="CharacterBody2D"]
collision_layer = 8
motion_mode = 1
script = ExtResource("1_amnuf")
fish = ExtResource("2_iguua")

[node name="LineOfSight" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(20, 0)
scale = Vector2(3, 3)
points = PackedVector2Array(-6.66667, 0, -13.6667, 0, -21.3333, 0)
texture = ExtResource("3_t6ea0")
texture_mode = 2

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("4_c6y7k")

[node name="DetectShape" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(30, 0)
shape = SubResource("CapsuleShape2D_yv2gw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 0)
shape = SubResource("CircleShape2D_xbx01")

[node name="RoamingTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="States" type="Node" parent="."]
script = ExtResource("5_7ytth")

[node name="state" type="Node" parent="States"]
script = ExtResource("6_hiwmx")

[connection signal="area_entered" from="DetectArea" to="DetectArea" method="_on_area_entered"]
[connection signal="area_exited" from="DetectArea" to="DetectArea" method="_on_area_exited"]
[connection signal="body_entered" from="DetectArea" to="DetectArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectArea" to="DetectArea" method="_on_body_exited"]
[connection signal="timeout" from="RoamingTimer" to="." method="_on_roaming_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
